.provarCaches/00D410000011HE0EAM/objects/rstk__sycountry__c.object
<CustomObject>
    <description>sycountry__c</description>
    <fields>
        <fullName>BF_Intrastat_ICA_ICS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intrastat (ICA/ICS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sycountry_country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sycountry_country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sycountry_comments__c</fullName>
        <inlineHelpText>User-defined comments up to 100 characters in length.</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sycountry_country__c</fullName>
        <inlineHelpText>The Country for which this record applies.</inlineHelpText>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sycountry_eu__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Country is a member of the European Union.</inlineHelpText>
        <label>Member of European Union</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sycountry_isocountry__c</fullName>
        <description>sycountry_isocountry__c</description>
        <label>ISO Country Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rstk__ISO_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Country Master</label>
    <listViews>
        <fullName>rstk__RS_Country_Master_Maintenance</fullName>
        <columns>NAME</columns>
        <columns>rstk__sycountry_country__c</columns>
        <columns>rstk__sycountry_eu__c</columns>
        <columns>rstk__sycountry_comments__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Country Masters</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>